fix: add align-items in container-not-only

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -59,6 +59,7 @@ header {
 	gap: 0 30px;
 	flex-wrap: nowrap;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .content-not-only {
